--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=8.3",
         "symfony/framework-bundle": "^7|^8",
-        "berry/html": "^0"
+        "berry/html": ">=0.4"
     },
     "require-dev": {
         "phpstan/extension-installer": "^1.4",
