actually register IconFactory as a service

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "symfony/ux-icons": "^2"
     },
     "suggest": {
-        "symfony/ux-icons": "If you want to use \\Berry\\Symfony\\UX\\IconFactory"
+        "symfony/ux-icons": "For \\Berry\\Symfony\\UX\\IconFactory"
     },
     "config": {
         "allow-plugins": {
