add tests for controller trait

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,3 +30,6 @@ jobs:
 
       - name: Run PHPStan
         run: ./vendor/bin/phpstan analyse
+
+      - name: Run Pest Tests
+        run: ./vendor/bin/pest --ci
