--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     },
     "suggest": {
         "symfony/ux-icons": "Required to render icons via the IconFactory",
-        "symfony/security-bundle": "Allows accessing the current user, token or check permissions within components"
+        "symfony/security-bundle": "Allows accessing the current user, token or check permissions within components",
+        "twig/twig": "Allows rendering twig blocks and templates with Berry"
     },
     "config": {
         "allow-plugins": {
